; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/boot/compressed/extr_kaslr.c_find_random_phys_addr.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/boot/compressed/extr_kaslr.c_find_random_phys_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@memmap_too_large = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [57 x i8] c"Aborted memory entries scan (more than 4 memmap= args)!\0A\00", align 1
@CONFIG_PHYSICAL_ALIGN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @find_random_phys_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @find_random_phys_addr(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* @memmap_too_large, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = call i32 @debug_putstr(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0))
  store i64 0, i64* %3, align 8
  br label %25

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  %12 = load i32, i32* @CONFIG_PHYSICAL_ALIGN, align 4
  %13 = call i64 @ALIGN(i64 %11, i32 %12)
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i64 @process_efi_entries(i64 %14, i64 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %10
  %19 = call i64 (...) @slots_fetch_random()
  store i64 %19, i64* %3, align 8
  br label %25

20:                                               ; preds = %10
  %21 = load i64, i64* %4, align 8
  %22 = load i64, i64* %5, align 8
  %23 = call i32 @process_e820_entries(i64 %21, i64 %22)
  %24 = call i64 (...) @slots_fetch_random()
  store i64 %24, i64* %3, align 8
  br label %25

25:                                               ; preds = %20, %18, %8
  %26 = load i64, i64* %3, align 8
  ret i64 %26
}

declare dso_local i32 @debug_putstr(i8*) #1

declare dso_local i64 @ALIGN(i64, i32) #1

declare dso_local i64 @process_efi_entries(i64, i64) #1

declare dso_local i64 @slots_fetch_random(...) #1

declare dso_local i32 @process_e820_entries(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
